Fix quote-text backdrop-filter, fix overflow issue
Backdrop-filter was only limited to the quote-sub-section, which
resulted in it not covering the full width of the background image.
This is because the section was set to a max-width of 960px.
This hard limit also caused this section to overflow when reducing the
window width, resulting in a white blank area appearing to the right
of the content.

Remove max-width from quote-sub-section then readjust the quote-text
max-width to match more with the project goal picture.

--- a/styles.css
+++ b/styles.css
@@ -180,15 +180,14 @@ img {
     width: 100%;
 }
 
-.quote-sub-section {
-    max-width: var(--section-max-width);
+.quote-sub-section {   
     margin: auto;
     padding: 10% 0;
     backdrop-filter: blur(10px);
 }
 
 .quote-text {
-    position: relative;
+    max-width: 32%;
     color: #e5e7eb;
     font-size: 36px;
     font-family: var(--roboto-font);
@@ -196,7 +195,6 @@ img {
     font-style: italic;
     -webkit-text-stroke: var(--black-text-stroke);
     margin: 0 auto;
-    max-width: 83%;
 }
 
 .quote-source-text {
@@ -207,10 +205,6 @@ img {
     left: 60%;
     margin: 0;
     -webkit-text-stroke: var(--black-text-stroke);
-}
-
-.call-to-action-sub-section {
-    max-width: var(--section-max-width);
 }
 
 .action-box {
